@@ -68,7 +68,13 @@ main (int argc, char *argv[])
     return EXIT_FAILURE;
   }
 
-  esmart_pdf_file_set (o, filename);
+  if (!esmart_pdf_file_set (o, filename)) {
+    evas_object_del (o);
+    ecore_evas_shutdown ();
+    ecore_shutdown ();
+    return EXIT_FAILURE;
+  }
+
   esmart_pdf_page_set (o, page_number);
   esmart_pdf_render (o);
   evas_object_move (o, 0, 0);
